--- a/stylesheets/forms.scss
+++ b/stylesheets/forms.scss
@@ -102,6 +102,9 @@ input {
   font-weight:700;
   font-size:30px;
   text-align:right;
+  @media screen and (max-width:500px) {
+    font-size:20px;
+  }
 }
 
 .total-description {
